<resources>
    <string name="app_name">Exam</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Se Connecter</string>
    <string name="register">S\'inscrire</string>
    <string name="forgot_password">Mot de passe oublié?</string>
    <string name="register_txt">Inscription</string>
    <string name="name">Name</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="valider">valider</string>
    <string name="formetsante">Forme et Santé</string>
    <string name="loisirs">Loisirs</string>
    <string name="shopping">Shopping</string>
</resources>